--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "spatie/laravel-server-side-rendering": "^1.0",
         "swooletw/laravel-swoole": "^2.5"
     },
     "require-dev": {
