--- a/package.json
+++ b/package.json
@@ -9,20 +9,33 @@
 		"prod": "npm run production",
 		"production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
 	},
-	"devDependencies": {
-		"axios": "^0.18",
-		"babel-preset-react": "^6.24.1",
-		"bootstrap-sass": "^3.3.7",
-		"cross-env": "^5.2",
-		"jquery": "^3.3.1",
-		"laravel-mix": "2.1.14",
-		"lodash": "^4.17.11",
-		"react": "^16.6.0",
-		"react-dom": "16.6.0"
-	},
+	"author": "",
+	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.18.0",
+		"bootstrap": "^4.1.3",
+		"connected-react-router": "^5.0.1",
+		"font-awesome": "^4.7.0",
+		"jquery": "^3.3.1",
+		"lodash": "^4.17.11",
+		"popper.js": "^1.14.5",
+		"react": "^16.6.3",
+		"react-dom": "^16.6.3",
+		"react-helmet": "^5.2.0",
+		"react-redux": "^5.1.1",
+		"react-router-dom": "^4.3.1",
+		"redux": "^4.0.1",
+		"redux-form": "^7.4.2",
+		"redux-thunk": "^2.2.0"
+	},
+	"devDependencies": {
+		"babel-plugin-syntax-dynamic-import": "^6.18.0",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
 		"chokidar": "^2.0.4",
 		"colors": "^1.3.2",
-		"is-running": "^2.1.0"
+		"cross-env": "^5.2.0",
+		"is-running": "^2.1.0",
+		"laravel-mix": "2.1.14"
 	}
 }
