--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/client.js": "/js/client.js",
+    "/css/app.css": "/css/app.css",
+    "/js/client.js.map": "/js/client.js.map",
+    "/css/app.css.map": "/css/app.css.map",
+    "/js/server.js": "/js/server.js",
+    "/js/server.js.map": "/js/server.js.map"
 }
