--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"private": true,
 	"scripts": {
-		"dev": "npm run development",
-		"development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"dev": "npm run dev-web",
+		"dev-web": "cross-env NODE_ENV=development TARGET=web node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"dev-node": "cross-env NODE_ENV=development TARGET=node node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
 		"watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
 		"watch-poll": "npm run watch -- --watch-poll",
 		"hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -16,6 +17,7 @@
 		"bootstrap": "^4.1.3",
 		"connected-react-router": "^5.0.1",
 		"font-awesome": "^4.7.0",
+		"isomorphic-fetch": "^2.2.1",
 		"jquery": "^3.3.1",
 		"lodash": "^4.17.11",
 		"popper.js": "^1.14.5",
@@ -26,7 +28,8 @@
 		"react-router-dom": "^4.3.1",
 		"redux": "^4.0.1",
 		"redux-form": "^7.4.2",
-		"redux-thunk": "^2.2.0"
+		"redux-thunk": "^2.2.0",
+		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
 		"babel-plugin-syntax-dynamic-import": "^6.18.0",
