--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+/public/js/server.js.map
+/public/js/client.js.map
+/public/mix-manifest.json
+/package-lock.json
