--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 		"dev": "npm run dev-web",
 		"dev-web": "cross-env NODE_ENV=development TARGET=web node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
 		"dev-node": "cross-env NODE_ENV=development TARGET=node node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"prod-web": "cross-env NODE_ENV=production TARGET=web node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"prod-node": "cross-env NODE_ENV=production TARGET=node node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
 		"watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
 		"watch-poll": "npm run watch -- --watch-poll",
 		"hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -15,30 +17,34 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"bootstrap": "^4.1.3",
-		"connected-react-router": "^5.0.1",
+		"connected-react-router": "^6.0.0",
 		"font-awesome": "^4.7.0",
 		"isomorphic-fetch": "^2.2.1",
 		"jquery": "^3.3.1",
 		"lodash": "^4.17.11",
-		"popper.js": "^1.14.5",
+		"popper.js": "^1.14.6",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
 		"react-helmet": "^5.2.0",
-		"react-redux": "^5.1.1",
+		"react-redux": "^6.0.0",
 		"react-router-dom": "^4.3.1",
 		"redux": "^4.0.1",
-		"redux-form": "^7.4.2",
-		"redux-thunk": "^2.2.0",
+		"redux-form": "^8.0.4",
+		"redux-thunk": "^2.3.0",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
+		"@babel/preset-react": "^7.0.0",
 		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"chokidar": "^2.0.4",
-		"colors": "^1.3.2",
+		"colors": "^1.3.3",
 		"cross-env": "^5.2.0",
 		"is-running": "^2.1.0",
-		"laravel-mix": "2.1.14"
+		"laravel-mix": "^4.0.8",
+		"resolve-url-loader": "^2.3.1",
+		"sass": "^1.15.2",
+		"sass-loader": "^7.1.0"
 	}
 }
