--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,6 @@
 {
-    "/js/server.js": "/js/server.js"
+    "/js/client.js": "/js/client.js?id=c8f275d6f7e06465d141",
+    "/css/app.css": "/css/app.css?id=dd660fa706fe934c0f95",
+    "/js/client.js.map": "/js/client.js.map?id=eec170b3f68feb4523da",
+    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2"
 }
