--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-helmet": "^5.2.0",
 		"react-redux": "^6.0.0",
 		"react-router-dom": "^4.3.1",
+		"react-transition-group": "^2.5.1",
 		"redux": "^4.0.1",
 		"redux-form": "^8.0.4",
 		"redux-thunk": "^2.3.0",
