--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,10 @@
 {
-    "/js/client.js": "/js/client.js?id=5a466a11bdd03d9051d3",
+    "/js/client.js": "/js/client.js?id=2acd726cf8a19734d489",
     "/css/app.css": "/css/app.css?id=e7ebd0c9dcbb4ac9b88e",
-    "/js/client.js.map": "/js/client.js.map?id=25e0279627cd7797be64",
-    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2"
+    "/js/client.js.map": "/js/client.js.map?id=0c0060f5f641a3bc8898",
+    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2",
+    "/js/manifest.js": "/js/manifest.js?id=52ecc173b17011b08872",
+    "/js/manifest.js.map": "/js/manifest.js.map?id=a50cb30582ea8753b66b",
+    "/js/vendor.js": "/js/vendor.js?id=96341ea18b594d63ebd8",
+    "/js/vendor.js.map": "/js/vendor.js.map?id=3c6a4817d3e66b4a6df5"
 }
