--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"chokidar": "^2.0.4",
 		"colors": "^1.3.3",
 		"cross-env": "^5.2.0",
+		"hard-source-webpack-plugin": "^0.13.1",
 		"is-running": "^2.1.0",
 		"laravel-mix": "^4.0.8",
 		"resolve-url-loader": "^2.3.1",
