--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
 		"popper.js": "^1.14.6",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
+		"react-draggable": "^3.1.1",
 		"react-helmet": "^5.2.0",
 		"react-redux": "^6.0.0",
 		"react-router-dom": "^4.3.1",
+		"react-sketch": "^0.5.1",
 		"react-transition-group": "^2.5.1",
 		"redux": "^4.0.1",
 		"redux-form": "^8.0.4",
