--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"redux": "^4.0.1",
 		"redux-form": "^8.0.4",
 		"redux-thunk": "^2.3.0",
+		"socket.io-client": "^2.2.0",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
