--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,10 @@
 {
-    "/js/client.js": "/js/client.js?id=5a466a11bdd03d9051d3",
-    "/css/app.css": "/css/app.css?id=e7ebd0c9dcbb4ac9b88e",
-    "/js/client.js.map": "/js/client.js.map?id=25e0279627cd7797be64",
-    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2"
+    "/js/client.js": "/js/client.js",
+    "/css/app.css": "/css/app.css",
+    "/js/client.js.map": "/js/client.js.map",
+    "/css/app.css.map": "/css/app.css.map",
+    "/js/manifest.js": "/js/manifest.js",
+    "/js/manifest.js.map": "/js/manifest.js.map",
+    "/js/vendor.js": "/js/vendor.js",
+    "/js/vendor.js.map": "/js/vendor.js.map"
 }
