--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-dom": "^16.6.3",
 		"react-draggable": "^3.1.1",
 		"react-helmet": "^5.2.0",
+		"react-modal": "^3.8.1",
 		"react-redux": "^6.0.0",
 		"react-router-dom": "^4.3.1",
 		"react-transition-group": "^2.5.1",
