--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.18.0",
+		"babel-polyfill": "^6.26.0",
 		"bootstrap": "^4.1.3",
 		"connected-react-router": "^6.0.0",
 		"font-awesome": "^4.7.0",
@@ -24,6 +25,7 @@
 		"jquery": "^3.3.1",
 		"lodash": "^4.17.11",
 		"popper.js": "^1.14.6",
+		"query-string": "^6.3.0",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
 		"react-draggable": "^3.1.1",
@@ -39,19 +41,20 @@
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.3.4",
 		"@babel/preset-react": "^7.0.0",
 		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"chokidar": "^2.0.4",
 		"colors": "^1.3.3",
+		"concurrently": "^4.1.0",
 		"cross-env": "^5.2.0",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"is-running": "^2.1.0",
 		"laravel-mix": "^4.0.8",
 		"resolve-url-loader": "^2.3.1",
 		"sass": "^1.15.2",
-		"sass-loader": "^7.1.0",
-		"concurrently": "^4.1.0"
+		"sass-loader": "^7.1.0"
 	}
 }
