Updatig to game start

--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
 		"dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
 		"dev-web": "npm run dev -- --env.mixfile=client.mix",
 		"dev-node": "npm run dev -- --env.mixfile=server.mix",
-		"prod-web": "cross-env NODE_ENV=production TARGET=web node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"prod-node": "cross-env NODE_ENV=production TARGET=node node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch-poll": "npm run watch -- --watch-poll",
-		"hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"prod": "npm run production",
-		"production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"prod-web": "npm run prod -- --env.mixfile=client.mix",
+		"prod-node": "npm run prod -- --env.mixfile=server.mix",
 		"dev-concurrent": "concurrently --kill-others  \"npm run dev-web\" \"npm run dev-node\" "
 	},
 	"author": "",
