--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		"laravel/framework": "5.5.*",
 		"laravel/tinker": "~1.0",
 		"spatie/laravel-server-side-rendering": "^1.0",
-		"swooletw/laravel-swoole": "^2.5",
+		"swooletw/laravel-swoole": "2.6.5.4",
 		"tymon/jwt-auth": "1.0.0-rc.3"
 	},
 	"require-dev": {
