--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"redux-form": "^8.0.4",
 		"redux-thunk": "^2.3.0",
 		"socket.io-client": "^2.2.0",
+		"validator": "^10.11.0",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
