--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,10 @@
 {
-    "/js/client.js": "/js/client.js?id=9eebec4b5c9436dfbfe9",
-    "/css/app.css": "/css/app.css?id=94cf2d56861eca8b56ca",
-    "/js/client.js.map": "/js/client.js.map?id=9dc99c07e86f517d7302",
-    "/js/manifest.js": "/js/manifest.js?id=82c9adcdafd58f25453d",
-    "/js/manifest.js.map": "/js/manifest.js.map?id=19a046cd503464a0acee",
-    "/js/vendor.js": "/js/vendor.js?id=94bcf929d3c1bc107c6e",
-    "/js/vendor.js.map": "/js/vendor.js.map?id=71059038665d1f152715"
+    "/js/client.js": "/js/client.js?id=0e974234cdfa8d88db21",
+    "/css/app.css": "/css/app.css?id=7c743c062b6f30d642b7",
+    "/js/client.js.map": "/js/client.js.map?id=af5e9b2c9f18c70e217f",
+    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2",
+    "/js/manifest.js": "/js/manifest.js?id=52ecc173b17011b08872",
+    "/js/manifest.js.map": "/js/manifest.js.map?id=a50cb30582ea8753b66b",
+    "/js/vendor.js": "/js/vendor.js?id=ec1d65ddbf45a1e1f714",
+    "/js/vendor.js.map": "/js/vendor.js.map?id=d4f5f35ed0b99ae6ed69"
 }
